force-app/main/default/objects/sked__Debug_Log__c/sked__Debug_Log__c.object-meta.xml
<CustomObject>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>