force-app/main/default/objects/sked__Debug_Log__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <description>Field will be added to existing Debug Log Object to allow capturing the Request URL for a Service Call.</description>
    <label>Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>