force-app/main/default/objects/sked__Debug_Log__c/fields/sked__Message__c.field-meta.xml
<CustomField>
    <fullName>sked__Message__c</fullName>
    <label>Message</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>