force-app/main/default/objects/sked__Debug_Log__c/fields/sked__Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debug Log</fullName>
            </value>
            <value>
                <fullName>Error Log</fullName>
            </value>
            <value>
                <fullName>Alert Log</fullName>
            </value>
            <value>
                <fullName>Activity Deleted</fullName>
            </value>
            <value>
                <fullName>Operation Record Submission</fullName>
            </value>
            <value>
                <fullName>Collections Territory Upsert Failed</fullName>
            </value>
            <value>
                <fullName>Collections Territory Delete Failed</fullName>
            </value>
            <value>
                <fullName>Site Collection Operation Upsert Failed</fullName>
            </value>
            <value>
                <fullName>Site Collection Operation Delete Failed</fullName>
            </value>
            <value>
                <fullName>Workday API Request</fullName>
            </value>
            <value>
                <fullName>Optimizer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>