force-app/main/default/objects/sked__Debug_Log__c/fields/sked__User__c.field-meta.xml
<CustomField>
    <fullName>sked__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>