force-app/main/default/objects/sked__Debug_Log__c/fields/sked_Category__c.field-meta.xml
<CustomField>
    <fullName>sked_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Validation Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>