force-app/main/default/objects/sked__Debug_Log__c/fields/sked_Request__c.field-meta.xml
<CustomField>
    <fullName>sked_Request__c</fullName>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>