force-app/main/default/objects/sked__Debug_Log__c/fields/sked_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Debug Logs</relationshipLabel>
    <relationshipName>sked_Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>