force-app/main/default/objects/sked__Debug_Log__c/fields/sked_Response__c.field-meta.xml
<CustomField>
    <fullName>sked_Response__c</fullName>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>