force-app/main/default/objects/sked__Debug_Log__c/fields/sked_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Status_Code__c</fullName>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>