force-app/main/default/objects/sked__Debug_Log__c/listViews/Job_Allocation_Travel_Time_Logs.listView-meta.xml
<ListView>
    <fullName>Job_Allocation_Travel_Time_Logs</fullName>
    <columns>NAME</columns>
    <columns>sked__Type__c</columns>
    <columns>sked__Summary__c</columns>
    <columns>sked__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked__Type__c</field>
        <operation>equals</operation>
        <value>Debug Log,Alert Log</value>
    </filters>
    <label>Job Allocation Travel Time Logs</label>
</ListView>