force-app/main/default/objects/sked__Debug_Log__c/listViews/Op_Record_Submissions_debug_log.listView-meta.xml
<ListView>
    <fullName>Op_Record_Submissions_debug_log</fullName>
    <columns>NAME</columns>
    <columns>sked__Type__c</columns>
    <columns>sked__Summary__c</columns>
    <columns>sked__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked__Type__c</field>
        <operation>equals</operation>
        <value>Operation Record Submission</value>
    </filters>
    <label>Op Record Submissions debug log</label>
</ListView>