force-app/main/default/objects/sked__Debug_Log__c/listViews/sked__All.listView-meta.xml
<ListView>
    <fullName>sked__All</fullName>
    <columns>NAME</columns>
    <columns>sked__Type__c</columns>
    <columns>sked__Summary__c</columns>
    <columns>sked__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>